started responsive about me - fixed alignment vertically

--- a/src/AboutMe/AboutMe.css
+++ b/src/AboutMe/AboutMe.css
@@ -123,38 +123,38 @@
   
 } */
 
-.dad{
+
+.centered{
   display: flex;
-  height: 100vh !important;
-  margin-top: 120vh !important;
+  justify-content: center;
+  align-items: center;
+ 
 
-}
-
-.centered {
-  
-  justify-content: center !important;
-  
-
-  margin-top: 20vh; 
 }
 
 .ab-container {
+  height: 100vh;
   display: flex;
-  justify-content: space-between;
+  margin-left: 30px;
+  max-width: 1200px;
 
+ 
 
-  margin: 0 auto;
+  justify-content: center !important;
+  align-items: center !important;
+  vertical-align: middle !important;
 
   /* Center the container horizontally */
 }
 
 .left-ab {
 
-  text-align: left;
-  margin-left: 50px !important;
+  text-align: justify;
+  
   transition: opacity 0.4s, width 0.4s, height 0.4s;
-  margin-right: 80px;
+
   padding: 0 auto;
+  margin-right: 10px;
   font-size: 1.7vw;
 }
 .title-left {
@@ -163,11 +163,12 @@
 .right-ab {
   margin-top: 10vh;
   justify-content: center;
-  margin-right: 110px;
-  font-size: 20px;
+
+  font-size: 2vw;
   text-align: left;
   padding: 10px;
   flex-direction: column;
+  margin-left: 20px;
   /* Display children in a column */
   align-items: center;
   transition: all 0.3s;
@@ -175,26 +176,27 @@
 
 
 .education-title {
-  font-size: 30px;
+  font-size: 2vw;
   margin-bottom: 20px;
 }
 
 .timeline {
-  margin: 0px auto;
+
   width: 360px;
   border-left: 1.5px solid #ccc;
-  padding: 31px 0px 0 31px;
+  padding: 10px 0px 0 31px;
 
 }
 
 .timeline-item {
   background-color: #fff;
-  padding: 0px 20px;
-  font-size: 20px !important;
+  padding: 0px 0px;
+  font-size: 1.5vw !important;
   line-height: 1.7;
   position: relative;
-  height: 80px;
+  height: 60px;
   margin-bottom: 20px;
+  
 }
 
 .timeline-item:before {
@@ -223,8 +225,28 @@
 
 
 
-@media(max-width:1085px) {
+@media(max-width:820px) {
+  .ab-container {
+    flex-direction: column;
+    align-items: center !important;
+    padding-right: 0px;
+    align-self: center !important;
+}
+.right-ab{
+  margin-top: 15px;
+  justify-self: left !important;
+  transition: all 0.3s;
+  font-size: 2.3vw !important;
 
+}
+.left-ab{
+
+  padding-right: 10px;
+
+}
+.timeline-item{
+  font-size: 2vw !important;
+}
 
 }
 
